# state-build-framework

./: .gitignore  404.html  CONTRIBUTING.md  CREDENTIALS.md  README.md  docker-compose.registry.yml  index.html  sitemap.xml  test-api.sh  test-cli-api.sh
.github/workflows/: build-and-publish.yml  test.yml  version-and-release.yml
api/: index.html
api/api-reference/: index.html
api/architecture/: index.html
api/authentication/: index.html
api_service/: Makefile  README.md  artifact_storage_migration.sql  dummy-data.sql  init-db.sql  pyproject.toml  requirements.txt  resumable_builds_migration.sql  schema_extension.sql
api_service/app/: __init__.py  dependencies.py  main.py  main_old.py  models.py
api_service/app/core/: auth.py  config.py  database.py
api_service/app/routers/: __init__.py  artifacts.py  auth.py  builds.py  cloud_providers.py  dashboard.py  health.py  image_types.py  image_variants.py  os_distributions.py  os_versions.py  platforms.py  projects.py  resume.py  state_codes.py  users.py  variables.py
api_service/docker/: .aider.chat.history.md  .aider.input.history  .env.example  Dockerfile  QUICKSTART.md  docker-compose.yml  nginx.Dockerfile  start-nginx.sh
api_service/docs/: API-REFERENCE.md  API_REFERENCE.md  ARCHITECTURE.md  AUTHENTICATION.md  README.md
api_service/nginx/: nginx.conf
api_service/tests/: build-state-api-tests.postman_collection.json  build-state-api-tests.postman_environment.json  build-state-synthetic-transactions.postman_collection.json  newman-config.json  newman-synthetic-config.json  test-api-newman.sh  test-api.sh
artifact-storage/: index.html
bldst_cli/: CLI_QUICKSTART.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  test-cli.sh
bldst_cli/buildstate/: __init__.py  client.py  models.py
bldst_cli/buildstate/cli/: main.py  utils.py
bldst_cli/buildstate/cli/commands/: artifacts.py  auth.py  builds.py  health.py  image_types.py  image_variants.py  os_distributions.py  os_versions.py  platforms.py  projects.py  state_codes.py  users.py
buildstate_cli/: CLI_QUICKSTART.md  LICENSE  README.md  pyproject.toml  test-cli.sh
buildstate_cli/buildstate/: client.py  config.py  models.py
buildstate_cli/buildstate/cli/: __init__.py  main.py  utils.py
buildstate_cli/buildstate/cli/commands/: auth.py  builds.py  cloud_providers.py  config.py
ci-cd-pipeline/: index.html
ci-cd-quickstart/: index.html
cli/: index.html
cli/quickstart/: index.html
database-architecture/: index.html
docs/: ARTIFACT-STORAGE.md  CI-CD-PIPELINE.md  CI_CD_PIPELINE.md  CI_CD_QUICKSTART.md  INDEX.md  PROBLEM-STATEMENT.md  RESUMABLE-BUILDS-DESIGN.md  RESUMABLE-BUILDS-QUICKSTART.md  RESUMABLE_BUILDS_QUICKSTART.md  database_architecture.md
examples/ci/concourse/: README.md
examples/ci/concourse/pipelines/: multi-platform-build.yml  simple-image-build.yml
examples/ci/jenkins/: README.md
examples/ci/jenkins/pipelines/: image-build-with-artifacts.jenkinsfile  multi-stage-pipeline.jenkinsfile  resumable-build.jenkinsfile  simple-build.jenkinsfile
examples/ci/jenkins/shared-library/: README.md
examples/ci/jenkins/shared-library/vars/: bldstCLI.groovy  (+1 more)
examples/packer/: README.md
examples/packer/scripts/common/: system-hardening.sh
examples/packer/templates/: rhel-8-base.pkr.hcl  ubuntu-22-04-base.pkr.hcl
mkdocs/: Dockerfile  mkdocs.yml  requirements.txt  setup_mkdocs.sh
mkdocs/docs/: ci-cd-quickstart.md  database-architecture.md  index.md  problem-statement.md  resumable-builds-quickstart.md
mkdocs/docs/api/: README.md  api-reference.md  architecture.md  authentication.md
mkdocs/docs/cli/: README.md
mkdocs/site/: 404.html  index.html  sitemap.xml
mkdocs/site/architecture/: index.html
mkdocs/site/ble-protocol/: index.html
mkdocs/site/building/: index.html
mkdocs/site/data-export/: index.html
mkdocs/site/detection-types/: index.html
mkdocs/site/icloud-setup/: index.html
mkdocs/site/permissions/: index.html
mkdocs/site/search/: search_index.json
mkdocs/site/user-guide/: index.html
problem-statement/: index.html
problem_statement/: Dockerfile  QUICKSTART.md  README.md  build-api.py  database-queries.sql  database-schema.sql  docker-compose.yml  failure-handling.md  index.md  init-database.sh  sample-data.sql  sample-implementation.md  setup.sh  states.md  storage-implementation.md
resumable-builds-design/: index.html
resumable-builds-quickstart/: index.html
scripts/: gh-actions-status.sh  test-api.sh  test-cli-api.sh  test_hash.py  version.sh
search/: search_index.json
stylesheets/: extra.css
