[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildstate_cli"
version = "0.1.0"
description = "CLI tool for Build State API - clean alternative to curl commands"
authors = [
    {name = "SAP Platform Engineering", email = "platform-eng@sap.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pyyaml>=6.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
bldst_cli = "buildstate.cli.main:app"

[project.urls]
Homepage = "https://github.com/sap/buildstate_cli"
Repository = "https://github.com/sap/buildstate_cli"
Issues = "https://github.com/sap/buildstate_cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["buildstate*"]

[tool.setuptools.package-data]
buildstate = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["keyring.*"]
ignore_missing_imports = true